--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             </li>
 
             <li>
-              <img style="width: 100px;" src="views/images/img_min/pizzeria_small.jpg">
+              <img style="width: 100px;" src="views/images/pizzeria.jpg">
               <a href="views/pizza.html">Cam's Pizzeria</a>
               <p>Who wants a performant pizza?</p>
             </li>
